<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/edit_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/edit_product_name" />

    <EditText
        android:id="@+id/input_product_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/default_product"
        android:inputType="text"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/edit_estimated_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/edit_estimated_time" />

    <EditText
        android:id="@+id/input_product_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/default_time"
        android:inputType="number"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/edit_location" />

    <EditText
        android:id="@+id/input_location_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/default_location"
        android:inputType="text"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/edit_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/edit_quantity" />

    <EditText
        android:id="@+id/input_quantity_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/default_quantity"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button_create_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/create_product" />

</LinearLayout>