...
    <string name="text_collection_time">Collection Time: PlaceHolder</string>
    <string name="create_user_text">Create User</string>
    <string name="default_lastname">Mustermann</string>
    <string name="title_lastname">Lastname:</string>
    <string name="default_firstname">Max</string>
    <string name="title_firstname">Firstname:</string>
    <string name="edit_user">Edit User</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="edit_product_name" translatable="false">Product Name</string>
    <string name="default_product" translatable="false">XBOX</string>
    <string name="edit_estimated_time" translatable="false">Estimated Time</string>
    <string name="edit_location" translatable="false">Location</string>
    <string name="edit_quantity" translatable="false">Quantity</string>
    <string name="default_time" translatable="false">5</string>
    <string name="default_location" translatable="false">aisle 3</string>
    <string name="default_quantity" translatable="false">12</string>
    <string name="create_product" translatable="false">Create Product</string>
    <string name="edit_product" translatable="false">Edit Product</string>
    <string name="scan_product">Scan product</string>
    <string name="no_camera_permission">You need the camera permission to be able to use this app!</string>
    <string name="scan_invalid_id">Invalid product id!</string>
    <string name="camera_not_working">Camera does not work!</string>
    <string name="login_title">Login</string>
    <string name="managerOrderActivityShowingOrders">Showing %1$d completed orders for %2$s</string>
...
